--- a/resources/assets/sass/partials/_partials-all.scss
+++ b/resources/assets/sass/partials/_partials-all.scss
@@ -6,25 +6,26 @@
 @import "theme-links";
 @import "theme-buttons";
 @import "theme-headlines";
-@import "theme-main-header";
-@import "theme-main-footer";
+
+@import "theme-header-main";
+@import "theme-footer-main";
 
 
 
 // import utility components
 // ---------------------------------
 
-@import "../utilities/mobile-flyout-menu";
-@import "theme-main-menu";
+// @import "../utilities/mobile-flyout-menu";
+// @import "theme-menu-main";
 
 @import "../utilities/horizontal-scroll-menu";
 
 
 
-// import vendor specific components
+// import libraries components
 // ---------------------------------
 
-@import "../libraries/wp-editor-2016";
+// @import "../libraries/wp-editor-2016";
 @import "theme-content-editor";
 
 // @import "../libraries/bxslider-base-4.1.2";
