--- a/public/css/style.css
+++ b/public/css/style.css
@@ -262,12 +262,6 @@ textarea {
   resize: vertical;
 }
 
-.content-editor img {
-  width: auto;
-  max-width: 100%;
-  height: auto;
-}
-
 img[src*=svg] {
   width: 100%\9;
 }
@@ -278,13 +272,9 @@ img[src*=svg] {
   }
 }
 
-.horizontal-scroll-menu:before, .content-editor:before, .horizontal-scroll-menu:after, .content-editor:after {
-  content: ' ';
-  display: table;
-}
-
-.horizontal-scroll-menu:after, .content-editor:after {
-  clear: both;
+.main-header, .intro {
+  width: 91.4666666667%;
+  margin: 0 4.2666666667%;
 }
 
 *,
@@ -310,7 +300,7 @@ body {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 100%;
   font-weight: normal;
   line-height: 1.625;
@@ -327,40 +317,17 @@ h6 {
   margin: 0;
 }
 
-.wrapper {
-  position: relative;
-  width: 91.4666666667%;
-  margin: 0 4.2666666667%;
-}
-
-@media screen and (min-width: 79.365em) {
-  .wrapper {
-    width: 73.125em;
-    margin: 0 auto;
-  }
-}
-
-.link {
-  box-shadow: 0 0 0 0 #0088cc;
-  color: #0088cc;
+a {
+  color: #333333;
   text-decoration: none;
+  box-shadow: inset 0 -0.0625em 0 0 #99cfeb;
   -webkit-transition: color 0.1s ease, box-shadow 0.1s ease;
   transition: color 0.1s ease, box-shadow 0.1s ease;
 }
 
-.link:hover, .link:focus {
-  color: #005f8f;
-  box-shadow: 0 1px 0 0 #005f8f;
-}
-
-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: none;
-  background-color: transparent;
-  box-shadow: none;
-  border-radius: 0;
+a:hover, a:focus {
+  color: #333333;
+  box-shadow: inset 0 -0.0625em 0 0 #0088cc;
 }
 
 .page-headline {
@@ -380,7 +347,20 @@ button {
 }
 
 .main-header {
-  background-color: rgba(255, 255, 255, 0.8);
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-flex: 1;
+  flex: 1 0 100%;
+  flex-flow: row nowrap;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+
+.main-header * {
+  width: 100%;
+  font-size: 0.9375rem;
+  font-weight: 400;
 }
 
 .sticky-footer-push {
@@ -398,184 +378,34 @@ button {
   background-color: #d6d6d6;
 }
 
-@-webkit-keyframes slidein-animation {
-  0% {
-    opacity: 0;
-  }
-  1% {
-    -webkit-transform: translateX(160px);
-    transform: translateX(160px);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-
-@keyframes slidein-animation {
-  0% {
-    opacity: 0;
-  }
-  1% {
-    -webkit-transform: translateX(160px);
-    transform: translateX(160px);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-
-.horizontal-scroll-menu {
-  overflow: hidden;
-  height: 44px;
-  padding: 4px 0;
-}
-
-.horizontal-scroll-menu .horizontal-scroll-menu-items {
-  width: 100%;
-  font-size: 0.1px;
-  white-space: nowrap;
-  padding-bottom: 50px;
-  overflow-x: auto;
-  overflow-y: hidden;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  -webkit-overflow-scrolling: touch;
-}
-
-.horizontal-scroll-menu .horizontal-scroll-menu-items > .horizontal-scroll-menu-item {
-  display: inline-block;
-  font-size: 1rem;
-  line-height: 1;
-  padding: 0 5px;
-  -webkit-animation-name: slidein-animation;
-  animation-name: slidein-animation;
-  -webkit-animation-duration: 350ms;
-  animation-duration: 350ms;
-  -webkit-animation-fill-mode: backwards;
-  animation-fill-mode: backwards;
-}
-
-.horizontal-scroll-menu .horizontal-scroll-menu-link {
-  display: block;
-  color: inherit;
-  text-decoration: none;
-  padding: 10px 5px;
-}
-
-.content-editor > * + * {
-  margin-top: 1.625em;
-}
-
-.content-editor h1,
-.content-editor h2,
-.content-editor h3,
-.content-editor h4,
-.content-editor h5,
-.content-editor h6 {
-  line-height: 1.1;
-}
-
-.content-editor h1 + *,
-.content-editor h2 + *,
-.content-editor h3 + *,
-.content-editor h4 + *,
-.content-editor h5 + *,
-.content-editor h6 + * {
-  margin-top: 0.8125em;
-}
-
-.content-editor h1 {
-  font-size: 2.625em;
-}
-
-.content-editor h2 {
-  font-size: 1.625em;
-}
-
-.content-editor h3 {
-  font-size: 1.25em;
-}
-
-.content-editor h4,
-.content-editor h5 {
-  font-size: 1em;
-}
-
-.content-editor h6 {
-  font-size: 0.8125em;
-}
-
-.content-editor .video-embed {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-}
-
-.content-editor .video-embed iframe,
-.content-editor .video-embed object,
-.content-editor .video-embed embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.content-editor a {
-  box-shadow: 0 0 0 0 #0088cc;
-  color: #0088cc;
-  text-decoration: none;
-  -webkit-transition: color 0.1s ease, box-shadow 0.1s ease;
-  transition: color 0.1s ease, box-shadow 0.1s ease;
-}
-
-.content-editor a:hover, .content-editor a:focus {
-  color: #005f8f;
-  box-shadow: 0 1px 0 0 #005f8f;
-}
-
-.content-editor ul,
-.content-editor ol {
+.connect {
   list-style: none;
-  margin-top: 0;
+  -webkit-columns: 2;
+  -moz-columns: 2;
+  columns: 2;
+  max-width: 500px;
 }
 
-.content-editor ul li,
-.content-editor ol li {
-  position: relative;
+.intro {
+  font-family: "Vidaloka", serif;
+  font-size: 2.5rem;
+  line-height: 1.2;
 }
 
-.content-editor ul li {
-  padding-left: 1.25em;
+@media (min-width: 20em) and (max-width: 73.125em) {
+  .intro {
+    font-size: calc(2.5rem + (3.75 - 2.5) * (100vw - 20rem) / (73.125 - 20));
+  }
 }
 
-.content-editor ul li:before {
-  content: '\2022';
-  position: absolute;
-  left: 0.4375em;
+@media (min-width: 73.125em) {
+  .intro {
+    font-size: 3.75rem;
+  }
 }
 
-.content-editor ol {
-  counter-reset: num-list;
-}
-
-.content-editor ol li {
-  padding-left: 2em;
-}
-
-.content-editor ol li:before {
-  counter-increment: num-list;
-  content: counter(num-list) ".";
-  position: absolute;
-  left: 0;
-  width: 1.625em;
-  text-align: right;
+.intro section > * + * {
+  margin-top: 0.6153846154em;
 }
 
 /*# sourceMappingURL=style.css.map */
