--- a/resources/assets/sass/partials/_theme-header-main.scss
+++ b/resources/assets/sass/partials/_theme-header-main.scss
@@ -1,3 +1,16 @@
 .main-header {
-  background-color: rgba($main-header-background-color, 0.8);
+  display: flex;
+  flex: 1 0 100%;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  @extend %block-inset;
+  padding: 20px 0;
+
+  * {
+    width: 100%;
+    font: {
+      size: rem(15px);
+      weight: 400;
+    }
+  }
 }
