--- a/resources/assets/sass/partials/_partials-all.scss
+++ b/resources/assets/sass/partials/_partials-all.scss
@@ -4,8 +4,8 @@
 @import "ghost-helpers";
 @import "theme-base";
 @import "theme-links";
-// @import "theme-buttons";
-@import "theme-headlines";
+@import "theme-buttons";
+// @import "theme-headlines";
 
 @import "theme-header-main";
 @import "theme-footer-main";
@@ -13,6 +13,8 @@
 @import "theme-connect";
 
 @import "theme-intro";
+@import "theme-outro";
+@import "theme-project";
 
 
 
