--- a/resources/assets/sass/partials/_theme-base.scss
+++ b/resources/assets/sass/partials/_theme-base.scss
@@ -12,11 +12,6 @@
   -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
-.xdebug-var-dump {
-  background: white !important;
-  color: black !important;
-}
-
 html,
 body {
   height:100%;
@@ -40,6 +35,10 @@ h4,
 h5,
 h6 {
   margin: 0;
+}
+
+.slash-split {
+  margin-right: -0.2em;
 }
 
 // .wrapper {
