--- a/resources/assets/sass/partials/_theme-header-main.scss
+++ b/resources/assets/sass/partials/_theme-header-main.scss
@@ -8,10 +8,7 @@
 
   * {
     width: 100%;
-    font: {
-      size: rem(15px);
-      weight: 400;
-    }
+    font-weight: 400;
   }
 }
 .main-header-name {
