--- a/resources/assets/sass/partials/_theme-variables.scss
+++ b/resources/assets/sass/partials/_theme-variables.scss
@@ -37,6 +37,8 @@ $link-border-color             : mix(white, $link-interaction-border-color, 60%)
 
 $label-color : mix(white, $theme-black, 60%);
 
+$image-background-color : $label-color;
+
 
 $project-overview-background-color : mix(white, $theme-gray, 20%);
 
