changed body font family

--- a/resources/assets/sass/partials/_theme-variables.scss
+++ b/resources/assets/sass/partials/_theme-variables.scss
@@ -22,7 +22,7 @@ $body-background-color : white;
 $wrapperWidth  : 1170; // px value
 
 
-$font-main   : 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-main   : 'Work Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-accent : 'Abril Fatface', serif;
 
 
