--- a/resources/assets/sass/partials/_theme-connect.scss
+++ b/resources/assets/sass/partials/_theme-connect.scss
@@ -1,12 +1,12 @@
 // Component variables
-$min-connect-width : 760;
+$min-connect-width : 850;
 $max-connect-width : $min-connect-width - 1;
 
 
 .connect {
   list-style: none;
   columns: 2;
-  column-gap: 20px;
+  column-gap: 25px;
   max-width: 800px;
 
   & > * {
@@ -20,8 +20,8 @@ $max-connect-width : $min-connect-width - 1;
         overflow: hidden;
       }
 
-      @media screen and (min-width: em(500px)) {
-        width: 70px;
+      @media screen and (min-width: em($min-connect-width)) {
+        width: 80px;
         float: left;
       }
     }
