--- a/resources/assets/sass/partials/_theme-project.scss
+++ b/resources/assets/sass/partials/_theme-project.scss
@@ -1,5 +1,5 @@
 // Component variables
-$project-detail-width-min : 500;
+$project-detail-width-min : 550;
 
 
 .project {
@@ -60,8 +60,9 @@ $project-detail-width-min : 500;
     }
 
     @media screen and (min-width: em($project-detail-width-min)) {
-      width: 100px;
+      width: 110px;
       float: left;
+      padding-right: 20px;
     }
   }
   & > *:last-child:not(:first-child) {
