start of more projects section

--- a/resources/assets/sass/partials/_theme-project.scss
+++ b/resources/assets/sass/partials/_theme-project.scss
@@ -65,7 +65,7 @@ $project-detail-width-min : 550;
       padding-right: 20px;
     }
   }
-  & > *:last-child:not(:first-child) {
+  & > *:last-child {
     columns: 355px 2;
     column-gap: em(55px, 16px);
   }
