added projects to additional section

--- a/resources/assets/sass/partials/_partials-all.scss
+++ b/resources/assets/sass/partials/_partials-all.scss
@@ -18,6 +18,9 @@
 @import "theme-project";
 @import "theme-project-v-suites";
 @import "theme-project-applied-storytelling";
+@import "theme-project-additional-projects";
+@import "theme-project-mbp";
+@import "theme-project-secondkit";
 
 
 
