adds projects to additional section

--- a/resources/assets/sass/partials/_partials-all.scss
+++ b/resources/assets/sass/partials/_partials-all.scss
@@ -21,6 +21,9 @@
 @import "theme-project-additional-projects";
 @import "theme-project-mbp";
 @import "theme-project-secondkit";
+@import "theme-project-did";
+@import "theme-project-fashion";
+@import "theme-project-lipari";
 
 
 
