--- a/resources/assets/sass/partials/_theme-project.scss
+++ b/resources/assets/sass/partials/_theme-project.scss
@@ -3,6 +3,8 @@ $project-detail-width-min : 550;
 
 
 .project {
+  width: 100%;
+
   @media screen and (max-width: em($wrapperWidth - 1px)) {
     margin: {
       top: percent(120px, $wrapperWidth);
@@ -100,8 +102,15 @@ $project-detail-width-min : 550;
   max-width: 1080px;
 }
 .project-highlight-medium {
-  width: percent(720px, $wrapperWidth);
+  // width: percent(720px, $wrapperWidth);
   max-width: 720px;
+
+  @media screen and (max-width: em(986px)) {
+    width: percent(1080px, $wrapperWidth);
+  }
+  @media screen and (min-width: em(987px)) {
+    width: percent(720px, $wrapperWidth);
+  }
 }
 .project-highlight-small {
   max-width: 420px;
@@ -129,9 +138,16 @@ $project-detail-width-min : 550;
     height: 100%;
   }
 }
+.project-highlight-push-right {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+}
 .project-highlight-copy {
   display: block;
   position: relative;
+  width: 100%;
+  max-width: 420px;
   font-size: em(15px, 16px);
   line-height: (21/15);
   padding-top: 15px;
