--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,35 +1,173 @@
 ---
-export interface Props {
-	title: string;
-}
+export type Props = {
+  title: string;
+};
 
 const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
 <style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
+  :root {
+    --primary-hue: 210deg;
+    --primary-sat: 100%;
+    --primary-lit: 40%;
+
+    --color-primary: hsl(
+      var(--primary-hue)
+      var(--primary-sat)
+      var(--primary-lit)
+    );
+    --color-primary-transparent: hsl(
+      var(--primary-hue)
+      var(--primary-sat)
+      var(--primary-lit) / 0.5
+    );
+
+    --color-light-gray: hsl(240deg 10% 95%);
+    --color-gray: hsl(240deg 5% 60%);
+    --color-dark-gray: hsl(240deg 5% 25%);
+
+    --color-background: hsl(0deg 0% 100%);
+    --color-text: hsl(240deg 100% 10%);
+
+    --max-width-container: 800px;
+  }
+
+  *,
+  *::after,
+  *::before {
+    box-sizing: border-box;
+  }
+
+  * {
+    margin: 0;
+  }
+
+  html:focus-within {
+    scroll-behavior: smooth;
+  }
+
+  body {
+    background-color: var(--color-background);
+    color: var(--color-text);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Fira Sans', 'Droid Sans',
+      'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+      'Segoe UI Symbol';
+    line-height: calc(1ex / 0.32);
+    min-height: 100vh;
+    text-rendering: optimizeSpeed;
+    -webkit-font-smoothing: antialiased;
+  }
+  body[data-theme='dark'] {
+    --color-background: hsl(240, 10%, 10%);
+    --color-text: hsl(240, 10%, 95%);
+  }
+
+  img,
+  picture,
+  svg {
+    display: block;
+    max-width: 100%;
+  }
+
+  button,
+  input,
+  select,
+  textarea {
+    font: inherit;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    overflow-wrap: break-word;
+  }
+
+  code {
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+      'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono',
+      'Bitstream Vera Sans Mono', 'Courier New', monospace;
+  }
+
+  a {
+    text-decoration-skip-ink: auto;
+  }
+
+  :where(ul, ol)[role='list'] {
+    list-style: none;
+  }
+  :where(ul, ol):not([role='list']) > li + li {
+    margin-top: calc(1ex / (0.64 + 0.32));
+  }
+
+  @media (prefers-reduced-motion: reduce) {
+    html:focus-within {
+      scroll-behavior: auto;
+    }
+
+    *,
+    *::after,
+    *::before {
+      animation-duration: 0.01ms !important;
+      animation-iteration-count: 1 in !important;
+      scroll-behavior: auto !important;
+      transition-duration: 0.01ms !important;
+    }
+  }
+
+  h1,
+  h2 {
+    line-height: calc(1ex / 0.42);
+    margin-block: calc(1ex / (0.42 + 0.32));
+  }
+  h1 {
+    font-size: 2.5em;
+  }
+  h2 {
+    font-size: 2em;
+  }
+  h3 {
+    font-size: 1.75em;
+    line-height: calc(1ex / 0.38);
+    margin-block: calc(1ex / (0.38 + 0.32));
+  }
+  h4 {
+    font-size: 1.5em;
+    line-height: calc(1ex / 0.37);
+    margin-block: calc(1ex / (0.37 + 0.32));
+  }
+
+  p {
+    margin-block: calc(1ex / 0.64);
+  }
+
+  a {
+    color: inherit;
+  }
+  :where(p, li) a {
+    color: var(--color-primary);
+    text-decoration-color: var(--color-primary-transparent);
+    transition: text-decoration 250ms ease;
+  }
+  :where(p, li) a:where(:hover, :focus) {
+    text-decoration-color: currentColor;
+  }
 </style>
