--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const { title } = Astro.props;
       var(--primary-lit) / 0.5
     );
 
-    --color-light-gray: hsl(240deg 10% 95%);
+    --color-light-gray: hsl(240deg, 5%, 80%);
     --color-gray: hsl(240deg 5% 60%);
     --color-dark-gray: hsl(240deg 5% 25%);
 
