--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ const { title } = Astro.props;
     <slot />
   </body>
 </html>
+
 <style is:global>
   :root {
     --primary-hue: 210deg;
@@ -26,14 +27,10 @@ const { title } = Astro.props;
     --primary-lit: 40%;
 
     --color-primary: hsl(
-      var(--primary-hue)
-      var(--primary-sat)
-      var(--primary-lit)
+      var(--primary-hue) var(--primary-sat) var(--primary-lit)
     );
     --color-primary-transparent: hsl(
-      var(--primary-hue)
-      var(--primary-sat)
-      var(--primary-lit) / 0.5
+      var(--primary-hue) var(--primary-sat) var(--primary-lit) / 0.5
     );
 
     --color-light-gray: hsl(240deg, 5%, 80%);
@@ -169,5 +166,21 @@ const { title } = Astro.props;
   }
   :where(p, li) a:where(:hover, :focus) {
     text-decoration-color: currentColor;
+  }
+
+  .grid-container {
+    display: grid;
+    font-size: 1.125rem;
+    grid-template-columns: 1fr fit-content(52ch) 1fr;
+    margin-inline: auto;
+    max-width: var(--max-width-container);
+    padding-inline: 1.0875rem;
+    padding-top: calc(1ex / 0.32);
+  }
+  .grid-full-width {
+    grid-column: 1 / span 3;
+  }
+  .grid-container > :not(.grid-full-width) {
+    grid-column: 2;
   }
 </style>
