refactor: use InferStaticPropTypes instead of CollectionEntry for prop type definitions

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,6 +39,7 @@ const { title } = Astro.props;
 
     --color-background: hsl(0deg 0% 100%);
     --color-text: hsl(240deg 100% 10%);
+    --color-text-secondary: var(--color-dark-gray);
 
     --max-width-container: 800px;
   }
