--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -1,7 +1,8 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
+import { getCollection } from 'astro:content';
 import Layout from '@layouts/Layout.astro';
 import PostMeta from '@components/PostMeta.astro';
+import type { InferGetStaticPropsType } from 'astro';
 
 export async function getStaticPaths() {
   const allPosts = await getCollection('blog');
@@ -12,8 +13,10 @@ export async function getStaticPaths() {
   }));
 }
 
-const { post } = Astro.props as {post: CollectionEntry<'blog'>};
-const {title, date} = post.data;
+type Props = InferGetStaticPropsType<typeof getStaticPaths>;
+
+const { post } = Astro.props;
+const { title, date } = post.data;
 const { Content } = await post.render();
 ---
 
@@ -23,7 +26,7 @@ const { Content } = await post.render();
       <PostMeta date={date} content={post.body} />
       <h1>{title}</h1>
     </header>
-    
+
     <Content />
   </main>
 </Layout>
@@ -36,7 +39,10 @@ const { Content } = await post.render();
 
   .callout > * {
     border-inline-start: solid 0.25em var(--color-light-gray);
+    color: var(--color-text-secondary);
+    font-size: 0.8888888889em;
     font-style: italic;
-    padding-inline-start: 0.75em;
+    padding-block: 0.5em;
+    padding-inline: 0.75em 0.5em;
   }
 </style>
